--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,7 @@ $secondary-color: #2ecc71;
 $text-color1: #08192d;
 
 $contentWidth: 1300px;
+
+@function vw($value) {
+    @return calc(#{$value}vw * 100 / 740);
+}
