--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -15,6 +15,7 @@ body {
     line-height: 1.6;
     background-color: #fff;
     overflow-x: hidden;
+    transition: transform 0.5s ease;
 }
 
 a {
